# totp-cli

./: .gitignore  Cargo.toml  install.bat  install.sh  readme.md
.github/workflows/: build.yml  release.yml
src/: main.rs
